# apps_interpreters_wamr

./: .gitignore
.github/workflows/: compilation_on_android_ubuntu.yml  compilation_on_windows.yml  spec_test_on_nuttx.yml
build-scripts/: config_common.cmake  runtime_lib.cmake
core/: config.h
core/iwasm/aot/: aot_loader.c  aot_runtime.c  aot_runtime.h
core/iwasm/common/: wasm_application.c  wasm_c_api.c  wasm_exec_env.h  wasm_memory.c  wasm_native.c  wasm_native.h  wasm_runtime_common.c  wasm_runtime_common.h
core/iwasm/compilation/: aot_compiler.c  aot_compiler.h  aot_emit_aot_file.c  aot_emit_const.c  aot_emit_control.c  aot_emit_control.h  aot_emit_exception.c  aot_emit_function.c  aot_emit_function.h  aot_llvm.c  aot_llvm.h  aot_llvm_extra.cpp
doc/: build_wamr.md
runtime-library/: CMakeLists.txt  build.sh  main_gc.c  wamr_config.cmake
runtime-library/dyntype/: CMakeLists.txt  dyntype.h  lib_dyntype_wrapper.c
runtime-library/dyntype/dyntype_qjs_impl/: context.c  fallback.c  object.c  type.h
runtime-library/dyntype/test/: CMakeLists.txt  dump.cc  object_property_test.cc  operator_test.cc  prototype_test.cc  types_test.cc
runtime-library/stdlib/: lib_array.c  lib_console.c  lib_timer.c
runtime-library/struct-dyn/: lib_structdyn.c  lib_structdyn.h
runtime-library/struct-indirect/: lib_struct_indirect.c
runtime-library/utils/: type_utils.c  type_utils.h  wamr_utils.c
samples/socket-api/: CMakeLists.txt
test-tools/addr2line/: addr2line.py
tests/wamr-test-suites/: test_wamr.sh
wamr-compiler/: CMakeLists.txt  main.c
(+36 files in other folders)
